kubernetes/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: helloworld.test
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 80
  - host: auth.inspections.test
    http:
      paths:
      - path: /
        backend:
          serviceName: auth-api
          servicePort: 80
